# adhd

./: .gitignore  Makefile  README.md  arraywalk.c  arraywalk.h  benchmarks.c  benchmarks.h  benchmarks.hpp  csv.c  csv.h  logging.c  logging.cpp  logging.h  logging.hpp  main.c  main.cpp  options.c  options.cpp  options.h  options.hpp  parallel.c  parallel.cpp  parallel.h  parallel.hpp  tuple-fun.cpp  vgconfig.cfg
benchmarks/: .gitignore  CMakeLists.txt  CompilerConfig.cmake  Makefile  arraywalk.c  arraywalk.cpp  arraywalk.h  benchmark-ideas.txt  benchmark.cpp  benchmark.hpp  config.hpp  flops.c  flops.h  hwcounters.hpp  main.cpp  prettyprint.hpp  range.hpp  rdtsc.h  streaming.c  streaming.cpp  streaming.h  timings.hpp  tuple-utils.hpp  util.c  util.cpp
benchmarks/arraywalk/: .gitignore  Makefile  arraywalk.cpp  arraywalk.hpp  arraywalk_def.h  arraywalk_loc.ii  arraywalk_vec.ii  c_bindings.cpp  c_bindings.h  c_main.c  config.cpp  config.hpp  cpp_main.cpp  main.cpp  prettyprint.cpp  prettyprint.hpp  rdtsc.h  timings.cpp  timings.hpp  util.hpp
benchmarks/arraywalk_threaded/: .gitignore  Makefile  arraywalk.cpp  arraywalk.hpp  arraywalk_vec.ii  config.cpp  config.hpp  main.cpp  timings.cpp  timings.hpp
benchmarks/deprecated/: flops.cpp  util.hpp
benchmarks/reduction/: .gitignore  Makefile  config.cpp  config.hpp  main.cpp  reduction.cpp  reduction.hpp  reduction_loc.ii  reduction_vec.ii  timings.cpp  timings.hpp
papi-test/: .gitignore  Makefile  build-papi.sh  main.cpp  papi-test  tmp.cpp
shuffle/: Makefile  README  main.cpp
